fix(content): reset all content for Alicia

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -6,7 +6,7 @@
   image: images/profile.jpg
   location: Vancouver, Canada
   remote: true
-  company: -
+  company: Rudow & Star
   for_hire: true
   focus: TBD
   about: |
