--- a/content/social.yaml
+++ b/content/social.yaml
@@ -1,11 +1,5 @@
 - name: linkedin
-  url: https://linkedin.com/in/ruxandrafediuc
-
-- name: twitter
-  url: https://twitter.com/ruxandrafed
-
-- name: producthunt
-  url: https://www.producthunt.com/@ruxandrafed
+  url: https://linkedin.com/in/aliciafu
 
 - name: github
-  url: https://github.com/ruxandrafed
+  url: https://github.com/aliciabfu
