--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -14,8 +14,12 @@
 
     Paragraph 2
   skills:
-    - Skill 1
-    - Skill 2
+    - Google Ads
+    - Microsoft Ads
+    - Facebook Ads
+    - Instagram Ads
+    - LinkedIn Ads
+    - TikTok Ads
   highlights:
     - Highlight 1
     - Highlight 2
