--- a/content/education-certifications.yaml
+++ b/content/education-certifications.yaml
@@ -4,3 +4,9 @@
   url: https://www.google.com
   urlName: See credential on Credly
   image: images/google-analytics-certification.png
+  
+- name: Google Ads Search Certification
+  institution: Google
+  url: https://www.google.com
+  urlName: See credential on Credly
+  image: images/google-analytics-certification.png
