--- a/content/education-certifications.yaml
+++ b/content/education-certifications.yaml
@@ -10,3 +10,15 @@
   url: https://www.google.com
   urlName: See credential on Credly
   image: images/google-analytics-certification.png
+  
+- name: Bachelor of Business Administration (BBA)
+  institution: Simon Fraser University
+  url: https://www.sfu.ca
+  urlName: See program details
+  image: images/google-analytics-certification.png
+   
+- name: Business and Technical Writing
+  institution: Vancouver Community College
+  url: https://www.sfu.ca
+  urlName: See program details
+  image: images/google-analytics-certification.png
