--- a/content/education-certifications.yaml
+++ b/content/education-certifications.yaml
@@ -10,15 +10,39 @@
   url: https://www.google.com
   urlName: See credential on Credly
   image: images/google-analytics-certification.png
+
+  - name: Google Ads Display Certification
+  institution: Google
+  url: https://www.google.com
+  urlName: See credential on Credly
+  image: images/google-analytics-certification.png
+  
+  - name: Google Ads Video Certification
+  institution: Google
+  url: https://www.google.com
+  urlName: See credential on Credly
+  image: images/google-analytics-certification.png
+  
+  - name: Microsoft Advertising Certification
+  institution: Microsoft
+  url: https://www.google.com
+  urlName: See credential on Credly
+  image: images/google-analytics-certification.png
+  
+  - name: LinkedIn Certified Marketing Insider
+  institution: LinkedIn
+  url: https://www.google.com
+  urlName: See credential on Credly
+  image: images/google-analytics-certification.png
   
 - name: Bachelor of Business Administration (BBA)
   institution: Simon Fraser University
-  url: https://www.sfu.ca
+  url: https://www.sfu.ca/students/admission/programs/a-z/b/business/overview.html
   urlName: See program details
   image: images/google-analytics-certification.png
    
 - name: Business and Technical Writing
   institution: Vancouver Community College
-  url: https://www.sfu.ca
+  url: https://calendar.vcc.ca/continuing-studies/business-technical-writing-certificate/
   urlName: See program details
   image: images/google-analytics-certification.png
