--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -10,9 +10,9 @@
   for_hire: true
   focus: TBD
   about: |
-    Paragraph 1
+    Alicia is a results-oriented Senior Performance Marketing Consultant with over a decade of experience in paid media and demand generation across SaaS, ecommerce, and lead gen.
 
-    Paragraph 2
+    With a strong agency background, she is accustomed to working in a fast-paced and ever-changing industry. She has worked with some top brands including  Canon, NYU Stern, UBC, Bulletproof Coffee, The Little Potato Company, Roller Rabbit, Coast Appliances, Blanche Macdonald, BoardVitals, The Salvation Army, Fatburger, Douglas College, Sprott Shaw, VanArts, and more. 
   skills:
     - Google Ads
     - Microsoft Ads
@@ -21,8 +21,10 @@
     - LinkedIn Ads
     - TikTok Ads
   highlights:
-    - Highlight 1
-    - Highlight 2
+    - Paid Media Instructor
+    - Certified Strategist
+    - Agency and In-house Experience
+    - B2C and B2B Clients
   budget:
     currency: $
     min: 5
