--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -4,3 +4,33 @@
   url: https://rudowandstar.com/
   description: |
     A unique and personalized approach to digital marketing. We offer top-tier marketing services, real-time results, and enterprise-level client support.
+
+- company: VERB Interactive
+  position: Senior Performance Marketing Manager
+  description: |
+    VERB is a digital marketing and technology company specializing in Travel and Hospitality. We prioritize client over contract, providing excellent counsel and service across all our areas of expertise. This dedication to the relationship fosters a culture of mutual trust, respect and commitment.
+
+- company: Major Tom
+  position: Manager, Paid Media
+  description: |
+    Major Tom is a full-service agency that’s been purpose-built to help clients thrive in today’s increasingly complex marketing landscape. We cover the full spectrum of strategy, marketing, development, and creative. Marrying top-level strategic consultancy and impeccable implementation across the full spectrum of marketing services, Major Tom has been designed to help organizations connect with the right audiences, with the right information, at the right time. Major Tom was formed in July 2018 when 6S Marketing merged with Drive Digital
+
+- company: 6S Marketing
+  position: Senior Paid Media Strategist
+  description: |
+    6S Marketing is a digital marketing agency with offices in Vancouver, Toronto, and New York. 6S is more than a marketing agency — we’re a trusted partner and collaborator. We build results-oriented strategies and continually refine campaigns for optimal outcome. Measurable data is always provided to ensure quality service.
+
+- company: Graphically Speaking
+  position: Senior Digital Marketing Specialist
+  description: |
+    Graphically Speaking is an award winning digital agency and the second largest in Vancouver. Our specialty is in helping B2B and B2C companies with their digital initiatives. Our team of experts have built over 2,500 websites.
+
+- company: Cymax
+  position: Search Marketing Analyst - SEM / SEO
+  description: |
+    The Cymax Group of brands build tech that runs business. Founded in 2004, our vision was simple: design an exceptional eCommerce experience. That idea evolved into a platform that includes online marketplaces Cymax Business and HomeSquare; Freight Club, a logistics solution; and digital supply chain tech enabling manufacturers with multichannel control: Channel Gate.
+
+- company: ISI Branding - Ideographic Strategies Inc.
+  position: Email Marketing & SEO Strategist
+  description: |
+    At ISI Branding, we implement customer-responsive Strategic Brand Marketing, Web+Print Design, Social PR and New Media Services to maximize our client’s return on investment. ISI Branding’s competitive advantage lies in the diversity of our industries, services and three decades of integrated multi-platform, multi-lingual communications and award-winning strategies.
