--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -14,12 +14,12 @@
 
     With a strong agency background, she is accustomed to working in a fast-paced and ever-changing industry. She has worked with some top brands including  Canon, NYU Stern, UBC, Bulletproof Coffee, The Little Potato Company, Roller Rabbit, Coast Appliances, Blanche Macdonald, BoardVitals, The Salvation Army, Fatburger, Douglas College, Sprott Shaw, VanArts, and more. 
   skills:
-    - Google Ads
-    - Microsoft Ads
-    - Facebook Ads
-    - Instagram Ads
-    - LinkedIn Ads
-    - TikTok Ads
+    - SEM
+    - SEO
+    - Social Media
+    - CRO
+    - Branding
+    - Demand Generation
   highlights:
     - Paid Media Instructor
     - Certified Strategist
